# aiobaro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.docker/volumes/matrixdata/: homeserver.yaml
.github/ISSUE_TEMPLATE/: matrix-spec-template.md
aiobaro/: admin.py  core.py  exceptions.py  models.py  tools.py
tests/: conftest.py  fixtures.py  test_aiobaro.py  utils.py
tests/docker/: docker-compose.yml
tests/docker/volumes/matrixdata/: baro.signing.key  homeserver.yaml
