[tool.poetry]
name = "aiobaro"
version = "0.1.0"
description = ""
authors = ["Sekou <sekou.omar.kone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.17.0"
typer = "^0.3.2"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
pre-commit = "^2.10.1"
pylint = "^2.7.2"
pytest-docker = "^0.10.1"
pytest-asyncio = "^0.14.0"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \*.egg-info
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
